Update config.json via web form

--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
   "sosws": "pavithram/Ediys4245028/command",
   "entrsw": "pavithram/Ediysbfac27/command",
   "ffswsc": "pavithram/Ediys4245028/command",
-  "dngswsc": "pavithram/Ediys4245028/command",
+  "dngswsc": "pavithram/test/command",
   "cyswsc": "pavithram/Ediys4245028/command",
   "lrswsc": "pavithram/Ediys4245028/command",
   "mrswsc": "pavithram/Ediys4245028/command"
