Update config.json via web form

--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
   "drsws": "pavithram/Ediys4245028/command",
   "sosws": "pavithram/Ediys4245028/command",
   "entrsws": "pavithram/Ediys4245028/command",
-  "ffsws": "pavithram/Ediys4245028/command",
+  "ffsws": "pavithram/test/command",
   "dngsws": "pavithram/Ediys4245028/command",
   "cysws": "pavithram/Ediys4245028/command",
   "lrsws": "pavithram/Ediys4245028/command",
