Update config.json via web form

--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
   "sosws": "pavithram/Ediys4245028/command",
   "entrsws": "pavithram/Ediys4245028/command",
   "ffsws": "pavithram/test/command",
-  "dngsws": "pavithram/testcommand",
+  "dngsws": "pavithram/test/command",
   "cysws": "pavithram/Ediys4245028/command",
   "lrsws": "pavithram/Ediys4245028/command",
   "mrsws": "pavithram/Ediys4245028/command"
