Update config.json via web form

--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
   "entrsws": "pavithram/Ediys4245028/command",
   "ffsws": "pavithram/test/command",
   "dngsws": "pavithram/testcommand",
-  "cysws": "pavithram/Ediys4245028/command",
+  "cysws": "pavithram/test/command",
   "lrsws": "pavithram/Ediys4245028/command",
   "mrsws": "pavithram/Ediys4245028/command"
 }
