Update config.json via web form

--- a/config.json
+++ b/config.json
@@ -5,6 +5,6 @@
   "ffsws": "pavithram/test/command",
   "dngsws": "pavithram/testcommand",
   "cysws": "pavithram/test/command",
-  "lrsws": "pavithram/Ediys4245028/command",
+  "lrsws": "pavithram/test/command",
   "mrsws": "pavithram/Ediys4245028/command"
 }
