--- a/config.json
+++ b/config.json
@@ -6,5 +6,5 @@
   "dngsws": "pavithram/testcommand",
   "cysws": "pavithram/test/command",
   "lrsws": "pavithram/test/command",
-  "mrsws": "pavithram/Ediys4245028/command"
+  "mrsws": "pavithram/test/command"
 }
