Update config.json via web form

--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
   "entrsws": "pavithram/Ediys4245028/command",
   "ffsws": "pavithram/test/command",
   "dngsws": "pavithram/testcommand",
-  "cysws": "pavithram/test/command",
-  "lrsws": "pavithram/test/command",
-  "mrsws": "pavithram/test/command"
+  "cysws": "pavithram/test/1command",
+  "lrsws": "pavithram/test/2command",
+  "mrsws": "pavithram/test/3command"
 }
